Updates and adding a new (better) example
BUT! Did not have time to update example to make sure it runs.

--- a/docs/sweavedemo.Rnw
+++ b/docs/sweavedemo.Rnw
@@ -34,6 +34,7 @@
 %%% end preambling. %%%
 
 \begin{document}
+\SweaveOpts{concordance=TRUE} % For RStudio hiccups
 \title{{\huge Sweave:} \\Integrating R into your \TeX{} documents}
 \author{Lizzie Wolkovich}
 \date{10 October 2012}
@@ -83,7 +84,7 @@ qqnorm(rnorm(100))
 
 Excellent, moving on let's use some real data. We'll grab some data and ask R about it. 
 <<label=getpinot, echo=FALSE>>=
-setwd("/Users/Lizzie/Documents/git/demoSweave")
+setwd("/Users/Lizzie/Documents/git/teaching/demoSweave")
 pinot <- read.delim("data/pinotnoir.txt", header=TRUE)
 head(pinot)
 range(pinot$year)
@@ -94,7 +95,7 @@ Since I did not write \verb@results=hide@ you see the output.\\
 Let's contrast the above if I let echoing happen.
 
 <<label=getpinotwecho>>=
-setwd("/Users/Lizzie/Documents/git/demoSweave")
+setwd("/Users/Lizzie/Documents/git/teaching/demoSweave")
 pinot <- read.delim("data/pinotnoir.txt", header=TRUE)
 head(pinot)
 range(pinot$year)
